--- a/src/components/SportEvents/SportEvents.module.scss
+++ b/src/components/SportEvents/SportEvents.module.scss
@@ -1,5 +1,10 @@
 .eventsContainer {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 0 0;
+
+  @media screen and (max-width: 1023px) {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
