add notices, refactor code, add styles, add i18l

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,46 +1,92 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: 'Nunito', sans-serif;
+  font-family: 'Nunito', sans-serif;
 }
 
 html,
 body,
 #root,
 .App {
-    display: flex;
-    min-width: 100%;
-    min-height: 100%;
-}
-
-
-
-#dark {
-    header a {
-        color: #FFFFFF;
-    }
+  display: flex;
+  min-width: 100%;
+  min-height: 100%;
 }
 
 .App {
-    flex-direction: column;
-    background-repeat: no-repeat !important;
-    background-position: center !important;
-    background-size: cover !important;
+  flex-direction: column;
+  background-repeat: no-repeat !important;
+  background-position: center !important;
+  background-size: cover !important;
 }
 
 ul {
-    list-style-type: none;
-    padding-left: 0;
+  list-style-type: none;
+  padding-left: 0;
 }
 
 .container {
-    width: 100%;
-    max-width: 1440px;
-    padding: 0 15px;
-    margin: 0 auto;
+  width: 100%;
+  max-width: 1440px;
+  padding: 0 15px;
+  margin: 0 auto;
 }
 
+header {
+  .MuiMenuItem-root a {
+    color: #ffffff;
+  }
+}
+
+#langSwitcher .MuiButtonBase-root{
+  color: #ffffff;
+}
+
+.MuiDrawer-root {
+  .MuiBox-root {
+    .MuiList-root a {
+      color: #ffffff;
+      text-decoration: none;
+    }
+  }
+}
+
+.city {
+  & > .MuiBox-root > .MuiBox-root:first-child > .MuiTabs-root button {
+    background-color: rgba(255, 255, 255, 0.6);
+
+    &:first-child {
+      border-radius: 4px 0 0 4px;
+    }
+
+    &:last-child {
+      border-radius: 0 4px 4px 0;
+    }
+  }
+}
+
+#light {
+  #searchAutocomplete-listbox,
+  .MuiAutocomplete-noOptions {
+    background-color: rgba(255, 255, 255, 0.6);
+    backdrop-filter: blur(40px);
+  }
+}
+
+#dark {
+  #searchAutocomplete-listbox,
+  .MuiAutocomplete-noOptions {
+    background-color: rgba(18, 18, 18, 0.8);
+    backdrop-filter: blur(40px);
+  }
+
+  .city {
+    & > .MuiBox-root > .MuiBox-root:first-child > .MuiTabs-root button {
+      background-color: transparent;
+    }
+  }
+}
