--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -8,6 +8,9 @@ header {
   display: flex;
 
   .logoContainer {
+    display: flex;
+    padding-top: 5px;
+    padding-bottom: 5px;
     margin-right: 10px;
   }
 
